cabal-version: 3.0

name:                   plutus-currency
version:                0.1.0.0

build-type:             Simple
extra-source-files:     README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable ImportQualifiedPost
                        DataKinds DeriveAnyClass DeriveGeneric DerivingStrategies
                        FlexibleContexts GeneralizedNewtypeDeriving LambdaCase MultiParamTypeClasses
                        OverloadedStrings RecordWildCards ScopedTypeVariables TemplateHaskell 
                        TypeApplications TypeFamilies TypeOperators MonoLocalBinds NamedFieldPuns
  ghc-options:  -Wall -Wnoncanonical-monad-instances -Wunused-packages
                -Wincomplete-uni-patterns -Wincomplete-record-updates
                -Wredundant-constraints -Widentities
                -- See Plutus Tx readme
                -fno-specialise -fno-worker-wrapper
                -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

common maybe-Win32
  if os(windows)
     build-depends:    Win32

library
  import:               base, project-config
                      , maybe-Win32

  if flag(unexpected_thunks)
    cpp-options: -DUNEXPECTED_THUNKS

  hs-source-dirs:       src

  exposed-modules:      Blueshift.Currency.OneShotCurrency

  build-depends:        bytestring
                      , cardano-api
                      , flat
                      , plutus-core
                      , serialise
                      , aeson,
                      containers,
                      plutus-tx,
                      plutus-tx-plugin,
                      plutus-ledger,
                      plutus-ledger-api,
                      text -any,
                      aeson -any,
                      lens -any,
                      transformers -any

executable one-shot-currency
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              one-shot-currency.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , plutus-currency
                      , plutus-ledger-api
                      , bytestring
                      , plutus-tx
                      , aeson



